--- a/.github/workflows/swap-manager-ghcr.yml
+++ b/.github/workflows/swap-manager-ghcr.yml
@@ -25,8 +25,7 @@ jobs:
       uses: docker/setup-buildx-action@v3 # Docker Buildx 설정
 
     - name: Log in to GitHub Container Registry
-      # Git 태그 푸시 시에만 로그인 (워크플로우 자체가 태그 푸시로만 트리거되지만 명시)
-      if: startsWith(github.ref, 'refs/tags/v')
+      if: startsWith(github.ref, 'refs/tags/v') # Git 태그 푸시 시에만 로그인
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
@@ -40,19 +39,13 @@ jobs:
       with:
         images: ghcr.io/${{ github.repository }} # 예: ghcr.io/nerdnam/swap-manager
         tags: |
-          # Git 태그 vMajor.Minor.Patch (예: v0.0.1)에 대해
-          # 1. Docker 태그 Major.Minor.Patch (예: 0.0.1) 생성
           type=semver,pattern={{version}}
-          # 2. 이 Git 태그 푸시가 'latest' Docker 태그도 생성하도록 함
-          type=raw,value=latest,enable={{startsWith(github.ref, 'refs/tags/v')}}
+          type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
           # (선택 사항) Major.Minor 태그도 생성하려면 아래 주석 해제
           # type=semver,pattern={{major}}.{{minor}}
-          # (선택 사항) 커밋 SHA 태그도 생성하려면 아래 주석 해제
-          # type=sha,format=short
 
     - name: Build and push Docker image to GHCR
-      # Git 태그 푸시 시에만 이미지 빌드 및 푸시
-      if: startsWith(github.ref, 'refs/tags/v')
+      if: startsWith(github.ref, 'refs/tags/v') # Git 태그 푸시 시에만 이미지 빌드 및 푸시
       uses: docker/build-push-action@v5
       with:
         context: . # Dockerfile이 있는 경로 (swap-manager 프로젝트 루트)
