Finalize project: Update README, requirements, Docker configs, and CI workflow

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   swap-manager:
-    image: docker.io/nerdnam/swap-manager:latest
+    image: ghcr.io/nerdnam/swap-manager:latest
     container_name: swap-manager
     privileged: true
     pid: host
